--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" href="/IIITNR-Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IIITNR - CAM</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Madimi+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
